--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </div>
             
             <div class="portfolio-item">
-                <img src="Logos/logo_pixaly.png">
+                <img src="Logos/logo_pixaly2.png">
                 <div class="portfolio-overlay">
                     <h3>Pixaly</h3>
                 </div>
