--- a/index.html
+++ b/index.html
@@ -420,6 +420,13 @@
         <div class="portfolio-grid">
 
             <div class="portfolio-item">
+                <img src="Artes/gusttavo.png">
+                <div class="portfolio-overlay">
+                    <h3>Gusttavo Lima</h3>
+                </div>
+            </div>
+
+            <div class="portfolio-item">
                 <img src="Artes/billie.png">
                 <div class="portfolio-overlay">
                     <h3>Billie Eilish</h3>
